--- a/WebFrontEnd/Views/Home/Index.cshtml
+++ b/WebFrontEnd/Views/Home/Index.cshtml
@@ -6,4 +6,5 @@
 
 @section scripts {
     <script src="~/dist/main.js" asp-append-version="true"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9KVQJ0iW4ltfEUG00HAcpwj8ay_GEDJ4&v=3.exp&libraries=geometry,drawing,places"></script>
 }
